--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -65,7 +65,7 @@ body {
     width: 19rem;
     border-radius: 0.5rem;
     border: none;
-    border: solid 0.03rem #d9d9d9;
+    border: solid 0.5vmin black;
     outline: none;
     padding: 0.2rem 0rem 0.2rem 0rem;
     padding-left: 0.5rem;
